# BananaPiano

./: .clang-format  .gitignore  .styleguide  .wpiformat  CMakeLists.txt  Makefile  README.md  format-code.sh
.github/workflows/: lint-format.yml
Arduino/: sketch_BananaPiano.ino
BeagleBone/: BananaPiano.py  BananaPiano.service
sketch_BananaPiano/: sketch_BananaPiano.ino
src/: FilterBase.cpp  FilterBase.hpp  GLUtils.cpp  GLUtils.hpp  KalmanFilter.cpp  KalmanFilter.hpp  Main.cpp  Matrix.hpp  Matrix.inl  Normalize.cpp  Normalize.hpp  RenderData.cpp  RenderData.hpp  Rendering.cpp  Rendering.hpp  SerialPort.cpp  SerialPort.hpp  Util.cpp  Util.hpp  WeightedAverageFilter.cpp  WeightedAverageFilter.hpp  main.cpp  serial_port.cpp  serial_port.hpp
